# LR8

./: CMakeLists.txt  main.cpp
Sources/: CMakeLists.txt  ContextMenu.cpp  ImplementingTasks.cpp  StaticLibLR8.h
Sources/Task1/: BusesInfo  CMakeLists.txt  Functions.cpp  Functions1.cpp  Menus1.cpp  Task1.cpp  Task1.h
Sources/Task2/: CMakeLists.txt  Functions2.cpp  Menus2.cpp  RailwayInfo.txt  Task2.cpp  Task2.h
